Changed scripts name in package.json

--- a/Server/package.json
+++ b/Server/package.json
@@ -7,9 +7,9 @@
   "main": "index.js",
   "scripts": {
     "start" : "node dist/index.js",
-    "start:build": "tsc -p .",
-    "start:dev": "nodemon --exec ts-node src/index.ts",
-    "start:prod": "tsc -p . node dist/index.js"
+    "build": "tsc -p .",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "prod": "tsc -p . node dist/index.js"
   },
   "keywords": [],
   "author": "Shubham Pandey",
